--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "serve": "node server.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^8.6.0",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
